# meeting-room-reservation

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.override.yml  docker-compose.yml
backend/: README.md  alembic.ini  dockerfile  make.ps1  makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 96977ce9aed5_manual.py
backend/app/: main.py
backend/app/api/v1/: auth.py  booking.py  room.py  user.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/db/models/: booking.py  room.py  user.py
backend/app/repositories/: booking.py  room.py  user.py
backend/app/schemas/: booking.py  room.py  user.py
backend/app/services/: booking.py  room.py  user.py
backend/app/tests/: conftest.py  test_auth.py  test_booking.py  test_booking_access.py  test_booking_conflict.py  test_room.py  test_user.py  utils.py
