[tool.poetry]
name = "meeting-room-reservation"
version = "0.1.0"
description = "Backend API for meeting room reservation"
authors = ["Твое имя <email@example.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.29" }
sqlalchemy = "^2.0"
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = { extras = ["email"], version = "^2.5" }
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
passlib = { extras = ["bcrypt"], version = "^1.7" }
python-jose = "^3.3"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"
pytest-asyncio = "^0.23"
ruff = "^0.3"
mypy = "^1.8"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
